# miniC_Compiler

./: .gitignore  CMakeLists.txt  README.md
grammar/: MiniC.g4
inc/: compiler_options.h
inc/frontend/: ast_builder.h
src/: main.cc
src/frontend/: ast_builder.cc
src/utils/: compiler_options.cc
tests/gtests/: compiler_options_test.cc
